--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
