--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
+        <div id='root'></div>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
